# sphinxrecipes

./: pyproject.toml
docs/: Makefile  conf.py
