[project]
name = "sphinxrecipes"
version = "0.1"
description = "Recipe sample domain for Sphinx"
authors = [
    {name = "Holger Peters",email = "holger.peters@posteo.de"},
    {name = "Mark Meyer",email = "mark@ofosos.org"},
]
dependencies = [
    "sphinx>=7.2.6",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
[project.urls]
Homepage = "http://github.com/ofosos/sphinxrecipes"
Downloads = "http://pypi.python.org/pypi/sphinxrecipes"

